@@ -422,6 +422,21 @@
   }
 }
 
+@keyframes fadeInSlideUp {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+#chat-section.entering {
+  animation: fadeInSlideUp 0.5s ease-out forwards;
+}
+
 @media (max-width: 1100px) {
   .chat-wrapper {
     gap: 12px;
