@@ -203,6 +203,21 @@ main {
   transform: translateY(0);
 }
 
+@keyframes fadeInSlideUp {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+#game-list.entering {
+  animation: fadeInSlideUp 0.5s ease-out forwards;
+}
+
 @media (max-width: 768px) {
   .category-tabs { top: 0px; padding: 8px; gap: 8px; }
 }
