@@ -1,4 +1,15 @@
 /* css/notes-section.css */
+@keyframes fadeInSlideUp {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 #notes-section {
   font-family: "Poppins", system-ui, -apple-system;
   display: none;
@@ -6,6 +17,10 @@
   max-width: clamp(320px, 90vw, 980px);
   margin: 0 auto;
   box-sizing: border-box;
+}
+
+#notes-section.entering {
+  animation: fadeInSlideUp 0.5s ease-out forwards;
 }
 
 #notes-section h2 {
